// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic snapshot with empty props 1`] = `
.c0 {
  position: relative;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border-bottom-color: #f5f5f5;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  border-left-color: #f5f5f5;
  border-left-style: solid;
  border-left-width: 0;
  border-right-color: #f5f5f5;
  border-right-style: solid;
  border-right-width: 0;
  border-top-color: #f5f5f5;
  border-top-style: solid;
  border-top-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 16px;
  padding-left: 0;
  padding-right: 0;
  padding-top: 16px;
  width: 100%;
}

.c0:first-of-type {
  border-top: none;
}

.c0:last-of-type {
  border-bottom: none;
}

.c0 > * {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 16px;
  position: relative;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 {
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
}

.c5 {
  margin-top: 12px;
  margin-bottom: 8px;
  margin-left: 0;
  margin-right: 0;
}

.c7 {
  position: initial;
  bottom: 16px;
  right: 0;
  text-align: right;
}

.c8 {
  position: absolute;
  margin-top: 0;
  bottom: 16px;
  right: 0;
  text-align: right;
}

.c9 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
  white-space: pre;
}

.c10 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 600;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.5;
}

.c6 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  background-color: transparent;
  border: none;
  color: #3c5d6f;
  cursor: pointer;
  display: table;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  margin-top: 8px;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
  padding-top: 0;
  width: auto;
}

.c6:focus,
.c6:hover {
  color: #5e7480;
}

@media (min-width:992px) {
  .c4 {
    -webkit-flex: 1 1 auto;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
  }
}

@media (min-width:992px) {
  .c5 {
    margin-top: 0;
    margin-bottom: 0;
  }
}

@media (max-width:768px) {
  .c7 {
    position: absolute;
  }
}

@media (min-width:768px) {
  .c7 {
    margin-left: 1.5rem;
  }
}

@media (max-width:768px) {
  .c8 {
    position: initial;
    margin-top: 10px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          CartItemDetail({"isMiniCart":false,"quantity":null})
          StockWarning({})
        </div>
        <div
          className="c5"
        >
          QuantityInput({})
        </div>
      </div>
      <button
        className="c6"
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
  </div>
  <div
    className="c7"
  >
    Price({"displayPrice":"$9.99","hasPriceBottom":false})
    <div
      className="c8"
    >
      <div
        className="c9"
      >
        Total
         (
        ):
      </div>
      <div
        className="c10"
      />
    </div>
  </div>
</div>
`;

exports[`basic snapshot with isReadOnly prop 1`] = `
.c0 {
  position: relative;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border-bottom-color: #f5f5f5;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  border-left-color: #f5f5f5;
  border-left-style: solid;
  border-left-width: 0;
  border-right-color: #f5f5f5;
  border-right-style: solid;
  border-right-width: 0;
  border-top-color: #f5f5f5;
  border-top-style: solid;
  border-top-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 16px;
  padding-left: 0;
  padding-right: 0;
  padding-top: 16px;
  width: 100%;
}

.c0:first-of-type {
  border-top: none;
}

.c0:last-of-type {
  border-bottom: none;
}

.c0 > * {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 16px;
  position: relative;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 {
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
}

.c5 {
  position: initial;
  bottom: 16px;
  right: 0;
  text-align: right;
}

.c6 {
  position: absolute;
  margin-top: 0;
  bottom: 16px;
  right: 0;
  text-align: right;
}

.c7 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
  white-space: pre;
}

.c8 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 600;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.5;
}

@media (min-width:992px) {
  .c4 {
    -webkit-flex: 1 1 auto;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
  }
}

@media (max-width:768px) {
  .c5 {
    position: absolute;
  }
}

@media (min-width:768px) {
  .c5 {
    margin-left: 1.5rem;
  }
}

@media (max-width:768px) {
  .c6 {
    position: initial;
    margin-top: 10px;
  }
}

<div
  className="c0"
>
  <a
    href="product-slug"
  >
    <picture>
      <source
        media="(min-width: 768px)"
        srcSet="//placehold.it/150"
      />
      <img
        alt=""
        src="//placehold.it/100"
        style={
          Object {
            "display": "block",
          }
        }
      />
    </picture>
  </a>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          CartItemDetail({"attributes":"[Object]","isMiniCart":false,"productSlug":"product-slug","productVendor":"Patagonia","quantity":2,"title":"A Great Product"})
          StockWarning({"inventoryQuantity":3})
        </div>
      </div>
    </div>
  </div>
  <div
    className="c5"
  >
    Price({"displayPrice":"$20.00","displayCompareAtPrice":"$45.00","hasPriceBottom":false})
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        Total
         (
        2
        ):
      </div>
      <div
        className="c8"
      >
        $40.00
      </div>
    </div>
  </div>
</div>
`;

exports[`basic snapshot with productURLPath prop 1`] = `
.c0 {
  position: relative;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border-bottom-color: #f5f5f5;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  border-left-color: #f5f5f5;
  border-left-style: solid;
  border-left-width: 0;
  border-right-color: #f5f5f5;
  border-right-style: solid;
  border-right-width: 0;
  border-top-color: #f5f5f5;
  border-top-style: solid;
  border-top-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 16px;
  padding-left: 0;
  padding-right: 0;
  padding-top: 16px;
  width: 100%;
}

.c0:first-of-type {
  border-top: none;
}

.c0:last-of-type {
  border-bottom: none;
}

.c0 > * {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 16px;
  position: relative;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 {
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
}

.c5 {
  position: initial;
  bottom: 16px;
  right: 0;
  text-align: right;
}

.c6 {
  position: absolute;
  margin-top: 0;
  bottom: 16px;
  right: 0;
  text-align: right;
}

.c7 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
  white-space: pre;
}

.c8 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 600;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.5;
}

@media (min-width:992px) {
  .c4 {
    -webkit-flex: 1 1 auto;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
  }
}

@media (max-width:768px) {
  .c5 {
    position: absolute;
  }
}

@media (min-width:768px) {
  .c5 {
    margin-left: 1.5rem;
  }
}

@media (max-width:768px) {
  .c6 {
    position: initial;
    margin-top: 10px;
  }
}

<div
  className="c0"
>
  <a
    href="product/product-slug"
  >
    <picture>
      <source
        media="(min-width: 768px)"
        srcSet="//placehold.it/150"
      />
      <img
        alt=""
        src="//placehold.it/100"
        style={
          Object {
            "display": "block",
          }
        }
      />
    </picture>
  </a>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          CartItemDetail({"attributes":"[Object]","isMiniCart":false,"productURLPath":"product/","productSlug":"product-slug","productVendor":"Patagonia","quantity":2,"title":"A Great Product"})
          StockWarning({"inventoryQuantity":3})
        </div>
      </div>
    </div>
  </div>
  <div
    className="c5"
  >
    Price({"displayPrice":"$20.00","displayCompareAtPrice":"$45.00","hasPriceBottom":false})
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        Total
         (
        2
        ):
      </div>
      <div
        className="c8"
      >
        $40.00
      </div>
    </div>
  </div>
</div>
`;

exports[`basic snapshot with props 1`] = `
.c0 {
  position: relative;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border-bottom-color: #f5f5f5;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  border-left-color: #f5f5f5;
  border-left-style: solid;
  border-left-width: 0;
  border-right-color: #f5f5f5;
  border-right-style: solid;
  border-right-width: 0;
  border-top-color: #f5f5f5;
  border-top-style: solid;
  border-top-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 16px;
  padding-left: 0;
  padding-right: 0;
  padding-top: 16px;
  width: 100%;
}

.c0:first-of-type {
  border-top: none;
}

.c0:last-of-type {
  border-bottom: none;
}

.c0 > * {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 16px;
  position: relative;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 {
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
}

.c5 {
  margin-top: 12px;
  margin-bottom: 8px;
  margin-left: 0;
  margin-right: 0;
}

.c7 {
  position: initial;
  bottom: 16px;
  right: 0;
  text-align: right;
}

.c8 {
  position: absolute;
  margin-top: 0;
  bottom: 16px;
  right: 0;
  text-align: right;
}

.c9 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
  white-space: pre;
}

.c10 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 600;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.5;
}

.c6 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  background-color: transparent;
  border: none;
  color: #3c5d6f;
  cursor: pointer;
  display: table;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  margin-top: 8px;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
  padding-top: 0;
  width: auto;
}

.c6:focus,
.c6:hover {
  color: #5e7480;
}

@media (min-width:992px) {
  .c4 {
    -webkit-flex: 1 1 auto;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
  }
}

@media (min-width:992px) {
  .c5 {
    margin-top: 0;
    margin-bottom: 0;
  }
}

@media (max-width:768px) {
  .c7 {
    position: absolute;
  }
}

@media (min-width:768px) {
  .c7 {
    margin-left: 1.5rem;
  }
}

@media (max-width:768px) {
  .c8 {
    position: initial;
    margin-top: 10px;
  }
}

<div
  className="c0"
>
  <a
    href="product-slug"
  >
    <picture>
      <source
        media="(min-width: 768px)"
        srcSet="//placehold.it/150"
      />
      <img
        alt=""
        src="//placehold.it/100"
        style={
          Object {
            "display": "block",
          }
        }
      />
    </picture>
  </a>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          CartItemDetail({"attributes":"[Object]","isMiniCart":false,"productSlug":"product-slug","productVendor":"Patagonia","quantity":null,"title":"A Great Product"})
          StockWarning({"inventoryQuantity":3})
        </div>
        <div
          className="c5"
        >
          QuantityInput({"value":2})
        </div>
      </div>
      <button
        className="c6"
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
  </div>
  <div
    className="c7"
  >
    Price({"displayPrice":"$20.00","displayCompareAtPrice":"$45.00","hasPriceBottom":false})
    <div
      className="c8"
    >
      <div
        className="c9"
      >
        Total
         (
        2
        ):
      </div>
      <div
        className="c10"
      >
        $40.00
      </div>
    </div>
  </div>
</div>
`;
